# biggit

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
assets/logo/: Cargo.toml  README.md
assets/logo/src/: main.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/config/: Cargo.toml
crates/config/src/: paths.rs  persistence.rs
crates/core/: Cargo.toml
crates/core/src/: types.rs
crates/gows/: Cargo.toml
crates/gows/src/: app.rs  main.rs  message.rs  view.rs
crates/gows/src/graph/: layout.rs
crates/gui/: Cargo.toml
crates/gui/src/: app.rs  async_git.rs  main.rs  message.rs  update.rs  view.rs
