[package]
name = "biggit-gows"
version.workspace = true
edition.workspace = true

[[bin]]
name = "biggit-gows"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
clap.workspace = true
iced = { workspace = true, features = ["tokio", "canvas"] }
biggit-core.workspace = true
regex = "1"
